WSAT-M4: JavaScript interactivity added

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,10 @@ button:hover {
     background-color: #1e1e1e;
     color: white;
 }
+.dark-mode {
+    background-color: #121212;
+    color: white;
+}
 
 .hidden {
     display: none;
